# proba-forecasting

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: test.yaml  test_deploy.yaml
data/: .gitignore  processed.dvc  raw.dvc
models/: .gitignore
notebooks/: analyze_bikes.ipynb  analyze_energy.ipynb  backtest_challenge.ipynb  darts.ipynb  dvc.ipynb  energy_analysis.py  lgbm_analysis.ipynb  make_submission.py  pipeline.ipynb  weather.ipynb  xgboost.ipynb
notebooks/baselines/: bikes_baseline_script.py  no2_baseline_script.py  power_demand_baseline.ipynb  power_demand_baseline.py
output/: .gitignore
output/eval_plots/: .gitignore
scripts/: feature_grid_search.py  grid_search.sh  lgbm_grid_search.py  run_models.sh
src/probafcst/: __init__.py  backtest.py  data.py  forecast.py  model.py  plotting.py  weather.py
src/probafcst/metrics/: __init__.py  calibration_curve.py  coverage.py  interval_score.py
src/probafcst/models/: __init__.py  _base.py  _regression.py  catboost.py  darts.py  lgbm.py  linear_qr.py  qrf.py  regression.py  xgboost.py
src/probafcst/pipeline/: __init__.py  _base.py  evaluate.py  prepare.py  submit.py  train.py
src/probafcst/utils/: __init__.py  check_submission.py  create_submission.py  paths.py  sktime.py  tabularization.py  time.py
tests/: conftest.py  test_main.py
tests/data/: energy_2023.parquet
tests/metrics/: test_interval_score.py
tests/models/: test__regression.py  test_regression.py  test_xgboost.py
tests/utils/: test_create_submission.py  test_tabularization.py  test_time.py
